src/objects/Receptors__c.object
<CustomObject>
    <fields>
        <fullName>CB_11_Value__c</fullName>
        <label>CB-11 Value</label>
        <picklist>
            <controllingField>CB_11__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CB_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CB-11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAKO_Herceptest_Value__c</fullName>
        <label>DAKO Herceptest  Value</label>
        <picklist>
            <controllingField>DAKO_Herceptest__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAKO_Herceptest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAKO Herceptest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_TS_OS_Snomed__c</fullName>
        <label>ER_TS_OS Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERpos_OS_Snomed__c</fullName>
        <label>ERpos_OS Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estrogen_Intensity_Score_Number__c</fullName>
        <formula>IF(ISPICKVAL(Estrogen_Intensity_Score__c  , &apos;0 (negative)&apos;), 0, IF(ISPICKVAL(Estrogen_Intensity_Score__c  , &apos;1 (weak)&apos;), 1, IF(ISPICKVAL(Estrogen_Intensity_Score__c  , &apos;2 (intermediate)&apos;), 2, IF(ISPICKVAL(Estrogen_Intensity_Score__c  , &apos;3 (strong)&apos;), 3, 0))))</formula>
        <label>Estrogen Intensity Score Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estrogen_Intensity_Score__c</fullName>
        <label>Estrogen Intensity Score</label>
        <picklist>
            <picklistValues>
                <fullName>0 (negative)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 (weak)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 (intermediate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 (strong)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estrogen_Proportion_Score_Number__c</fullName>
        <formula>IF(ISPICKVAL(Estrogen_Receptor_Proportion_Score__c, &apos;0&apos;), 0, IF(ISPICKVAL(Estrogen_Receptor_Proportion_Score__c, &apos;1 (less than 1%)&apos;), 1, IF(ISPICKVAL(Estrogen_Receptor_Proportion_Score__c, &apos;2 (1%-10%)&apos;), 2, IF(ISPICKVAL(Estrogen_Receptor_Proportion_Score__c, &apos;3 (10%-33%)&apos;), 3,  IF( ISPICKVAL(Estrogen_Receptor_Proportion_Score__c, &apos;4 (33%-66%)&apos;) , 4,  IF( ISPICKVAL(Estrogen_Receptor_Proportion_Score__c, &apos;5 (66%-100%)&apos;) , 5, 0) ) ))))</formula>
        <label>Estrogen Proportion Score Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estrogen_Receptor_Proportion_Score__c</fullName>
        <label>Estrogen Receptor  Proportion Score</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 (less than 1%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 (1%-10%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 (10%-33%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 (33%-66%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 (66%-100%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estrogen_Receptor_Status__c</fullName>
        <label>Estrogen Receptor  Status</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estrogen_Total_Score_Number__c</fullName>
        <formula>IF( ISPICKVAL(Estrogen_Intensity_Score__c, &apos;Not available&apos;) || ISPICKVAL(Estrogen_Receptor_Proportion_Score__c, &apos;Not available&apos;), 0, Estrogen_Intensity_Score_Number__c  +  Estrogen_Proportion_Score_Number__c)</formula>
        <label>Estrogen Total Score Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FISH_test_not_done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FISH test not done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fish__c</fullName>
        <label>Fish</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HER2_neu_Marker__c</fullName>
        <label>HER2/neu Marker Status</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Her2Pos_OS_Snomed__c</fullName>
        <label>Her2Pos_OS Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHC__c</fullName>
        <label>IHC</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IHC_test_not_done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IHC test not done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letarality__c</fullName>
        <label>Letarality</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Study_Pathology_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On-Study Pathology Form</label>
        <referenceTo>On_Study_Pathology_Form__c</referenceTo>
        <relationshipLabel>Receptors</relationshipLabel>
        <relationshipName>Receptors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_FISH_Results__c</fullName>
        <label>Other FISH Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_FISH_Test_Value__c</fullName>
        <label>Other FISH Test Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_FISH_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other FISH Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_IHC_Results__c</fullName>
        <label>Other IHC Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_IHC_Test_Value__c</fullName>
        <label>Other IHC Test Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_IHC_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other IHC Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PgR_TS_OS_Snomed__c</fullName>
        <label>PgR_TS_OS Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Surgery Summary</label>
        <referenceTo>Post_Surgaory_Summary__c</referenceTo>
        <relationshipLabel>Receptors</relationshipLabel>
        <relationshipName>Receptors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progesterone_Intensity_Score_Number__c</fullName>
        <formula>IF(ISPICKVAL(Progesterone_Intensity_Score__c, &apos;0 (negative)&apos;), 0, IF(ISPICKVAL(Progesterone_Intensity_Score__c, &apos;1 (weak)&apos;), 1, IF(ISPICKVAL(Progesterone_Intensity_Score__c, &apos;2 (intermediate)&apos;), 2, IF(ISPICKVAL(Progesterone_Intensity_Score__c, &apos;3 (strong)&apos;), 3, 0))))</formula>
        <label>Progesterone Intensity Score Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Progesterone_Intensity_Score__c</fullName>
        <label>Progesterone Intensity Score</label>
        <picklist>
            <picklistValues>
                <fullName>0 (negative)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 (weak)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 (intermediate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 (strong)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Progesterone_Proportion_Score_Number__c</fullName>
        <formula>IF(ISPICKVAL(Progesterone_Receptor_Proportion_Score__c, &apos;0&apos;), 0, IF(ISPICKVAL(Progesterone_Receptor_Proportion_Score__c, &apos;1 (less than 1%)&apos;), 1, IF(ISPICKVAL(Progesterone_Receptor_Proportion_Score__c, &apos;2 (1%-10%)&apos;), 2, IF(ISPICKVAL(Progesterone_Receptor_Proportion_Score__c, &apos;3 (10%-33%)&apos;), 3, IF( ISPICKVAL(Progesterone_Receptor_Proportion_Score__c, &apos;4 (33%-66%)&apos;) , 4, IF( ISPICKVAL(Progesterone_Receptor_Proportion_Score__c, &apos;5 (66%-100%)&apos;) , 5, 0) ) ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progesterone Proportion Score Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Progesterone_Receptor_Proportion_Score__c</fullName>
        <label>Progesterone Receptor Proportion Score</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 (less than 1%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 (1%-10%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 (10%-33%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 (33%-66%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 (66%-100%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Progesterone_Receptor_Status__c</fullName>
        <label>Progesterone Receptor  Status</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Progesterone_Total_Score_Number__c</fullName>
        <formula>IF( ISPICKVAL(Progesterone_Receptor_Proportion_Score__c, &apos;Not available&apos;) || ISPICKVAL(Progesterone_Intensity_Score__c, &apos;Not available&apos;), 0,  Progesterone_Intensity_Score_Number__c  +  Progesterone_Proportion_Score_Number__c )</formula>
        <label>Progesterone Total Score Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_ER__c</fullName>
        <label>Total Score ER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_PR__c</fullName>
        <label>Total Score PR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Estrogen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progesteron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HER2/neu marker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ventana_Oncoprobe_Value__c</fullName>
        <label>Ventana Oncoprobe Value</label>
        <picklist>
            <controllingField>Ventana_Oncoprobe__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ventana_Oncoprobe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ventana Oncoprobe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ventana_kit_Value__c</fullName>
        <label>Ventana kit Value</label>
        <picklist>
            <controllingField>Ventana_kit__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ventana_kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ventana kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vysis_Path_Vision_Value__c</fullName>
        <label>Vysis/Path Vision Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vysis_Path_Vision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vysis/Path Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_Receptors_Id__c</fullName>
        <label>pg_Receptors_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Receptors</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Receptors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receptors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>